# DPhil_Studies

./: .gitignore  DPhil_Studies.code-workspace  README.md  results.csv
2021-04_Study_A_Diffusion/: .RData  .Rhistory  DEMO_FAS_jsonl_structure.ipynb  Twitter_API_credentials.json  archive_postprocess.py  bipartite_graph_viz.R  bispec_clustering_eval.ipynb  bispec_clustering_eval.py  bispec_clustering_search.py  bispectral_clustering.R  collect_user_timelines_convo_ids.py  first_use_of.py  full-archive-search.py  full_archive_search.py  generate_user_to_hashtag_matrix.py  process_json_test.ipynb  requirements.txt  search_hashtags.csv  search_hashtags.txt  test_script_graph_obj.R  timeline_analysis.py  unique_users.py  user_timeline_collection_full.sh  user_twarc_timelines.py  user_tweets.py  util.R  write_bispec_csv.py
2022-10-Study_B/: environment.yml  pyproject.toml
2022-10-Study_B/arc/: mpirun.sh  preprocess.sh  preprocess_cpu.sh
2022-10-Study_B/src/: collect_data.sh  enrich_data.sh  enrich_media.py  mediacloud_collect.py  plot_enrichment_pubs.py  profile_annot.py  quality_check_media.py  utils.py
2022-10-Study_B/src/newsanalysis/: __main__.py
2022-10-Study_B/src/newsanalysis/data_utils/: __init__.py  cli_data_utils.py  constants.py  get_text_from_dataset.py  mediacloud_acc_data.py  mediacloud_collect.py  postprocess.py  preprocess.py
2022-10-Study_B/src/newsanalysis/dataviz/: __init__.py  cli_dataviz.py  plots.py  quality_check_media.py
2022-10-Study_B/src/newsanalysis/modelling/: cli_modelling.py  training.py
2022-10-Study_B/tests/: test_preprocess.py
(+147 files in other folders)
